--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,23 +10,23 @@
             <h1 class="marg-top">
               MEMORY GAME
             </h1>
-            <a href="#game-window" data-toggle="pill" class="btn btn-primary marg-top start-button" (click)="gameStart()">Начать игру</a>
+            <a href="#game-window" data-toggle="pill" class="btn btn-primary marg-top start-button" (click)="gameStart()" data-tid="NewGame-startGame">Начать игру</a>
           </div>
       </div>
-      <div id="game-window"  class="col-md-12 text-center marg-top tab-pane fade">
+      <div id="game-window" class="col-md-12 text-center marg-top tab-pane fade" [ngClass]="{active: !gameMod.gameFinished}" data-tid="Deck">
           <div class="row">
             <div class="col-md-6 text-left">
-            <button class="btn btn-primary restart-button text-left">Начать заново</button>
+            <button class="btn btn-primary restart-button text-left" (click)="gameRestart()" data-tid="Menu-newGame">Начать заново</button>
           </div>
-          <div class="col-md-6 text-right">
-              <h2>Очки</h2>
+          <div class="col-md-6 text-right" data-tid="Menu-scores">
+              <h2>Очки {{gameMod.gameScore}}</h2>
             </div>
           </div>
           <div class="row marg-top">
-            <div *ngFor="let card of cards" id="{{card.cardValue}}" class="col-md-2 game-card marg-top">
-                <!--<a (click)="cardClick()"><img class="game-card-img" src={{card.cardImg}}></a>!-->
-                <div class="flip-container" onclick="this.classList.toggle('clicked');cardClick()">
-                    <div class="flipper">
+            <div *ngFor="let card of cards" class="col-md-2 game-card marg-top">
+                <!--<a (click)="cardClick()"><img class="game-card-img" src={{card.cardImg}}></a>this.classList.toggle('clicked');!-->
+                <div id={{card.cardID}} class="flip-container" (click)="cardClick(card.cardID)" [ngClass]="{clicked: card.cardHidden}">
+                    <div class="flipper" *ngIf="!card.isSolved">
                       <div class="front">
                           <img class="game-card-img" src={{card.cardImg}}>
                       </div>
@@ -38,5 +38,19 @@
             </div>
           </div>
       </div>
+      <div class="col-md-12 text-center vert-center tab-pane fade" id="finish-window" [ngClass]="{active: gameMod.gameFinished, in: gameMod.gameFinished}">
+        <div class="game-img">
+          <img src="../../../assets/Group 2.png">
+        </div>
+        <div class="game-interface">
+          <h2 class="marg-top">
+            Поздравляем!
+          </h2>
+          <h2>
+            Ваш итоговый счет: {{gameMod.gameScore}}
+          </h2>
+          <a href="#game-window" data-toggle="pill" class="btn btn-primary marg-top start-button" (click)="gameRestart()" data-tid="EndGame-retryGame">Еще раз</a>
+        </div>
+    </div>
   </div>
 </div>
