--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -46,8 +46,8 @@ transform: rotateY(180deg);
 }
     
 .flip-container, .front, .back {
-width: 90%;
-height: 185px;
+width: 100%;
+height: 230px;
 }
 .flipper {
 transition: 0.6s;
@@ -57,7 +57,6 @@ position: relative;
 }
 .front, .back {
 backface-visibility: hidden;
-    
 position: absolute;
 top: 0;
 left: 0;
@@ -73,4 +72,55 @@ outline: none !important
 }
 button::-moz-focus-inner {
 border: 0 !important
+}
+.no-margin {
+    margin: 0 !important
+}
+@media (max-width: 1199px) {
+.flip-container, .front, .back {
+    height: 183px;
+}
+}
+@media (max-width: 991px) {
+.marg-top {
+    margin-top: 15px;
+}
+.marg-bot {
+    margin-bottom: 5px;
+}
+.flip-container, .front, .back {
+    height: 132px;
+}
+}
+@media (max-width: 767px) {
+.flip-container, .front, .back {
+    margin: 0 !important;
+    height: 137px;
+}
+.game-card {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+.marg-top {
+    margin-top: 5px;
+}
+}
+@media (max-width: 620px) {
+.flip-container, .front, .back {
+    height: 103px;
+}
+}
+@media (max-width: 540px) {
+.flip-container, .front, .back {
+    height: 97px;
+}
+.game-card {
+    padding-left: 5px;
+    padding-right: 5px;
+}
+@media (max-width: 460px) {
+.flip-container, .front, .back {
+    height: 79px;
+}
+}
 }
