--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,56 +1,51 @@
-<div>
-  <div class="tab-content">
-      <!--<app-start-window id="start-window" class="tab-pane fade in active"></app-start-window>        
-      <app-game-window id="game-window" class="tab-pane fade"></app-game-window>!-->
-      <div class="col-md-12 text-center vert-center tab-pane fade in active" id="start-window">
-          <div class="game-img">
-            <img src="../../../assets/StartGame.png">
-          </div>
-          <div class="game-interface">
-            <h1 class="marg-top">
-              MEMORY GAME
-            </h1>
-            <a href="#game-window" data-toggle="pill" class="btn btn-primary marg-top start-button" (click)="gameStart()" data-tid="NewGame-startGame">Начать игру</a>
-          </div>
+<div class="tab-content">
+  <div class="col-xs-12 text-center vert-center tab-pane fade in active" id="start-window">
+    <div>
+        <img class="game-img" src="../../../assets/StartGame.png">
+    </div>
+    <div class="game-interface">
+        <h1 class="marg-top">
+          MEMORY GAME
+        </h1>
+        <a href="#game-window" data-toggle="pill" class="btn btn-primary marg-top start-button" (click)="gameStart()" data-tid="NewGame-startGame">Начать игру</a>
+    </div>
+  </div>
+  <div id="game-window" class="col-xs-12 text-center marg-top tab-pane fade" [ngClass]="{active: !gameMod.gameFinished}" data-tid="Deck">
+    <div class="col-xs-12">
+      <div class="col-xs-6 text-left">
+          <button class="btn btn-primary restart-button text-left" (click)="gameRestart()" data-tid="Menu-newGame">Начать заново</button>
       </div>
-      <div id="game-window" class="col-md-12 col-sm-12 text-center marg-top tab-pane fade" [ngClass]="{active: !gameMod.gameFinished}" data-tid="Deck">
-          <div class="row">
-            <div class="col-md-6 col-sm-6 col-xs-6 text-left">
-              <button class="btn btn-primary restart-button text-left" (click)="gameRestart()" data-tid="Menu-newGame">Начать заново</button>
-            </div>
-            <div class="col-md-6 col-sm-6 col-xs-6 text-right" data-tid="Menu-scores">
-              <h2>Очки {{gameMod.gameScore}}</h2>
-            </div>
-          </div>
-          <div class="col-xs-12 marg-top card-container text-center">
-            <div *ngFor="let card of cards" class="col-md-2 col-sm-2 col-xs-2 game-card marg-top">
-                <!--<a (click)="cardClick()"><img class="game-card-img" src={{card.cardImg}}></a>this.classList.toggle('clicked');!-->
-                <div id={{card.cardID}} class="flip-container" (click)="cardClick(card.cardID)" [ngClass]="{clicked: card.cardHidden}">
-                    <div class="flipper" *ngIf="!card.isSolved">
-                      <div class="front">
-                          <img class="game-card-img" src={{card.cardImg}}>
-                      </div>
-                      <div class="back">
-                          <img class="game-card-img" src="../../../assets/Cards/back.png">
-                      </div>
-                    </div>
-                </div>
-            </div>
-          </div>
+      <div class="col-xs-6 text-right" data-tid="Menu-scores">
+          <h2 class="game-score">Очки: {{gameMod.gameScore}}</h2>
       </div>
-      <div class="col-md-12 text-center vert-center tab-pane fade" id="finish-window" [ngClass]="{active: gameMod.gameFinished, in: gameMod.gameFinished}">
-        <div class="game-img">
-          <img src="../../../assets/Group 2.png">
+    </div>
+    <div class="col-xs-12 marg-top card-container text-center">
+      <div *ngFor="let card of cards" class="col-xs-2 game-card marg-top">
+        <div id={{card.cardID}} class="flip-container" (click)="cardClick(card.cardID)" [ngClass]="{clicked: card.cardHidden}">
+          <div class="flipper" *ngIf="!card.isSolved">
+            <div class="front">
+                <img class="game-card-img" src={{card.cardImg}}>
+            </div>
+            <div class="back">
+                <img class="game-card-img" src="../../../assets/Cards/back.png">
+            </div>
+          </div>
         </div>
-        <div class="game-interface">
-          <h2 class="marg-top">
-            Поздравляем!
-          </h2>
-          <h2>
-            Ваш итоговый счет: {{gameMod.gameScore}}
-          </h2>
-          <a href="#game-window" data-toggle="pill" class="btn btn-primary marg-top start-button" (click)="gameRestart()" data-tid="EndGame-retryGame">Еще раз</a>
-        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-xs-12 text-center vert-center tab-pane fade" id="finish-window" [ngClass]="{active: gameMod.gameFinished, in: gameMod.gameFinished}">
+    <div>
+        <img class="game-img" src="../../../assets/Group 2.png">
+    </div>
+    <div class="game-interface">
+        <h2 class="marg-top">
+          Поздравляем!
+        </h2>
+        <h2>
+          Ваш итоговый счет: {{gameMod.gameScore}}
+        </h2>
+        <a href="#game-window" data-toggle="pill" class="btn btn-primary marg-top start-button" (click)="gameRestart()" data-tid="EndGame-retryGame">Еще раз</a>
     </div>
   </div>
 </div>
