--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
         <a href="#game-window" data-toggle="pill" class="btn btn-primary marg-top start-button" (click)="gameStart()" data-tid="NewGame-startGame">Начать игру</a>
     </div>
   </div>
-  <div id="game-window" class="col-xs-12 text-center marg-top tab-pane fade" [ngClass]="{active: !gameMod.gameFinished}" data-tid="Deck">
+  <div id="game-window" class="col-xs-12 text-center marg-top tab-pane fade" [ngClass]="{active: !gameMod.gameFinished}" data-tid="Deck" *ngIf="gameMod.gameStarted">
     <div class="col-xs-12">
       <div class="col-xs-6 text-left">
           <button class="btn btn-primary restart-button text-left" (click)="gameRestart()" data-tid="Menu-newGame">Начать заново</button>
@@ -21,7 +21,7 @@
     </div>
     <div class="col-xs-12 marg-top card-container text-center">
       <div *ngFor="let card of cards" class="col-xs-2 game-card marg-top">
-        <div id={{card.cardID}} class="flip-container" (click)="cardClick(card.cardID)" [ngClass]="{clicked: card.cardHidden}">
+        <div id={{card.cardID}} class="flip-container" (click)="cardClick(card.cardID)" [ngClass]="{clicked: card.cardHidden}" attr.data-tid={{card.getTestAttrValue()}}>
           <div class="flipper" *ngIf="!card.isSolved">
             <div class="front">
                 <img class="game-card-img" src={{card.cardImg}}>
