--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div id="game-window" class="col-xs-12 text-center marg-top tab-pane fade" [ngClass]="{active: !gameMod.gameFinished}" data-tid="Deck" *ngIf="gameMod.gameStarted">
-    <div class="col-xs-12">
+    <div class="col-xs-12 col-md-10 col-md-offset-1">
       <div class="col-xs-6 text-left">
           <button class="btn btn-primary restart-button text-left" (click)="gameRestart()" data-tid="Menu-newGame">Начать заново</button>
       </div>
@@ -19,7 +19,7 @@
           <h2 class="game-score">Очки: {{gameMod.gameScore}}</h2>
       </div>
     </div>
-    <div class="col-xs-12 marg-top card-container text-center">
+    <div class="col-xs-12 col-md-10 col-md-offset-1 card-container text-center">
       <div *ngFor="let card of cards" class="col-xs-2 game-card marg-top">
         <div id={{card.cardID}} class="flip-container" (click)="cardClick(card.cardID)" [ngClass]="{clicked: card.cardHidden}" attr.data-tid={{card.getTestAttrValue()}}>
           <div class="flipper" *ngIf="!card.isSolved">
