--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,16 +10,17 @@
         <a href="#game-window" data-toggle="pill" class="btn btn-primary marg-top start-button" (click)="gameStart()" data-tid="NewGame-startGame">Начать игру</a>
     </div>
   </div>
-  <div id="game-window" class="col-xs-12 text-center marg-top tab-pane fade" [ngClass]="{active: !gameMod.gameFinished}" data-tid="Deck" *ngIf="gameMod.gameStarted">
+  <div id="game-window" class="col-xs-12 text-center tab-pane fade" [ngClass]="{active: !gameMod.gameFinished}" *ngIf="gameMod.gameStarted">
     <div class="col-xs-12 col-md-10 col-md-offset-1">
       <div class="col-xs-6 text-left">
           <button class="btn btn-primary restart-button text-left" (click)="gameRestart()" data-tid="Menu-newGame">Начать заново</button>
       </div>
-      <div class="col-xs-6 text-right" data-tid="Menu-scores">
-          <h2 class="game-score">Очки: {{gameMod.gameScore}}</h2>
+      <div class="col-xs-6 text-right">
+          <div class="game-score-label">Очки: </div>
+          <div class="game-score" data-tid="Menu-scores">{{gameMod.gameScore}}</div>
       </div>
     </div>
-    <div class="col-xs-12 col-md-10 col-md-offset-1 card-container text-center">
+    <div class="col-xs-12 col-md-10 col-md-offset-1 card-container text-center" data-tid="Deck">
       <div *ngFor="let card of cards" class="col-xs-2 game-card marg-top">
         <div id={{card.cardID}} class="flip-container" (click)="cardClick(card.cardID)" [ngClass]="{clicked: card.cardHidden}" attr.data-tid={{card.getTestAttrValue()}}>
           <div class="flipper" *ngIf="!card.isSolved">
